# clickup-tool

./: .gitignore  pyproject.toml  readme.md
clickup_tool/: __init__.py
clickup_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
