[project]
name = "clickup-tool"
version = "1.2.3"
description = "ClickUp integration for CrewAI"
readme      = "README.md"
authors     = [{ name = "Kaleb Masco", email = "mascokaleb@gmail.com" }]
requires-python = ">=3.10"
dependencies = ["crewai>=0.114", "requests>=2.32"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
